# cursor-snap-mcp

./: .gitignore  LICENSE  README.md  README_CN.md  feedback_daemon.py  feedback_ui.py  install.ps1  install.sh  pyproject.toml  server.py  settings_dialog.py  start-tray.sh  test_daemon_regression.py  tray_app.py
docs/: install-guide
hooks/: clear-interrupt.ps1  clear-interrupt.sh  interrupt-check-subagent.ps1  interrupt-check-subagent.sh  interrupt-check.ps1  interrupt-check.sh
