[project]
name = "interactive-feedback-mcp"
version = "0.2.0"
description = "MCP server for interactive user feedback with screenshot capture and command execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
]
